# AI-Lab

./: .coverage  C6_C6_C6.midi  README.md  functions.py  main.ipynb  main.py  output.mid  output.txt  project-specification.md  pyproject.toml  test.py  test.txt  test_generate.py  test_midi.py  test_midi_to_pitch.py  test_note.py  testing.py  ui.py  user_interface.py  week1_report.md  week2_report.md  week4_report.md  week5_report.md
MIDI/: verdi_nabucco_coro-di-schiavi-ebrei_(c)laffay.mid
Project Documents/: implementation_document.md  project_specification.md  testing_document.md  user_guide.md
Weekly Reports/: week3_report.md  week6_report.md
testing/: test_midi.py  test_note.py
