[tool.poetry]
name = "ai-lab"
version = "0.1.0"
description = ""
authors = ["Arina <arinacoroliuc@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.3.3"
pytest = "^8.3.3"
python-rtmidi = "^1.5.8"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.8"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
include = [
    "functions.py"
    ]